Fix main view bottom margin on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,7 +54,7 @@ html, body {
 #harja-main-view {
   height: 100%;
   padding-top: 2em;
-  padding-bottom: $harja-footer-height;
+  margin-bottom: $harja-footer-height;
 }
 
 .harja-sub-views {
